# eugenio

./: .cproject  .gitmodules  .project  README.md  sdkconfig  sdkconfig.old
doc/html/: annotated.html  annotated_dup.js  app__nvs_8h_source.html  classes.html  dir_108232308e1e82f4bb661b0d719ce714.html  dir_108232308e1e82f4bb661b0d719ce714.js  dir_1a4ba0e34a84ec68b7344eb77cc9b312.html  dir_1a4ba0e34a84ec68b7344eb77cc9b312.js  dir_8a6bbbe02bf462db7b7925f12c7cff1d.html  dir_8a6bbbe02bf462db7b7925f12c7cff1d.js  dir_c3e9365c0d1bbbbb2ee573b907e5cfdd.html  dir_c3e9365c0d1bbbbb2ee573b907e5cfdd.js  dir_cfda7d7a15c98c923b02963da13798b6.html  dir_cfda7d7a15c98c923b02963da13798b6.js  dir_f34041aaa2dab5cbb961767a15186f1f.html  dir_f34041aaa2dab5cbb961767a15186f1f.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  http__server_8c.html  http__server_8c.js  http__server_8h.html  http__server_8h.js  http__server_8h_source.html  index.html  main_8c.html  menudata.js  navtreedata.js  (+16 more)
main/: .cproject  CMakeLists.txt  LCDI2C.c  LCDI2C.h  app_nvs.c  app_nvs.h  app_role.h  aux_app.c  aux_app.h  console_app.c  console_app.h  cooler_app.c  cooler_app.h  http_server.c  http_server.h  lcd_app.c  lcd_app.h  lm35_app.c  lm35_app.h  main.c  master.c  msg_app.c  msg_app.h  slave.c  tasks_common.h  uartHandle.c  uartHandle.h  uart_Handle.c  uart_Handle.h  uart_app.c  uart_app.h  wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  app_sta.js  index.html  index_sta.html
main/webpageConSTA/: app.js
(+37 files in other folders)
